# Polynomial-Fighter

./: .directory  .gitignore  CMakeLists.txt  Polynomial-Fighter.sln  Polynomial_Fighter___dokumentacja.docx  README.md  titles.txt  wskaźniczki.txt
Polynomial-Fighter/: APSBuilder.cpp  APSBuilder.h  AdvancedParticle.cpp  AdvancedParticle.h  AdvancedParticleSystem.cpp  AdvancedParticleSystem.h  AdvancedParticleSystemData.h  Asset Manager.h  AssetManager.cpp  AssetManager.h  AuthorsList.cpp  AuthorsList.h  Bullet.cpp  Bullet.h  BulletBase.cpp  BulletBase.h  CameraShake.cpp  CameraShake.h  Colors.cpp  Colors.h  Debug.cpp  Debug.h  Delegate.h  DesignatedTarget.h  EasterEgg.cpp  EasterEgg.h  Enemy.cpp  Enemy.h  EnemyCannon.cpp  EnemyCannon.h  EnemyPolynomialAdapter.cpp  EnemyPolynomialAdapter.h  EnemySpawner.cpp  EnemySpawner.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EquationProvider.cpp  EquationProvider.h  (+128 more)
